--- a/index.html
+++ b/index.html
@@ -57,18 +57,8 @@
         <div class="text">Home Content</div>
     </div>
 
-    <script>
-        let btn = document.querySelector("#btn");
-        let sidebar = document.querySelector(".sidebar");
-        
-        btn.onclick = function(){
-            sidebar.classList.toggle("active");
-        }
-        
-    </script>
-
+    <script src="assets/js/script.js"></script>
 
 </body>
-
 </html>
 
