add profile img

--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
                 </li>
                 <li>
                     <a href="#">
+                        <i class='bx bxs-extension'></i>
+                        <span class="links_name">Experience</span>
+                    </a>
+                    <span class="tooltip">Experience</span>
+                </li>
+                <li>
+                    <a href="#">
                         <i class='bx bx-medal' ></i>
                         <span class="links_name">Achievement</span>
                     </a>
@@ -54,7 +61,12 @@
     </div>
 
     <div class="Home_content">
-        <div class="text">Home Content</div>
+        <div class="LandingPage">
+            <div class="text">Home Content</div>
+            <div class="Profile1">
+                <img src="assets/img/Profile2.png"></img>
+            </div>
+        </div>
     </div>
 
     <script src="assets/js/script.js"></script>
